# chessbot

./: .gitignore  CMakeLists.txt  README.md
include/: CMakeLists.txt
include/chessbot/: CBoard.h  CMove.h  CPiece.h  constants.h  enums.h  hello.h  magics_32.h  magics_64.h  types.h
include/chessbot/pieces/: CPiece.h  NonSlidingPiece.h  Piece.h  SlidingPiece.h
src/: CBoard.cpp  CMakeLists.txt  CMove.cpp  CPiece.cpp  Piece.cpp  generate_magics.cpp  hello.cpp
test/: 01-testBoardCreate.cpp  02-testManipulateSquares.cpp  03-testGenerateMovesets.cpp  CMakeLists.txt  main.cpp
